# vulkan-tutorial-hlsl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CH1_triangle/: CMakeLists.txt  hello_glfw.cpp  hello_triangle.cpp
CH1_triangle/shaders/: compilleHLSL.bat  compilleHLSLwithDXC.bat  compilleHLSLwithDXC2.bat  frag.spv  vert.spv
CH1_triangle/shaders/hlsl/: shader.frag  shader.hlsl  shader.vert
CH2_RTXdemo/: CMakeLists.txt
CH2_RTXdemo/framework/: vulkanapp.cpp
CH2_RTXdemo/shaders/: compilleGLSL.bat  ray_gen.glsl  ray_miss.glsl
CH2_RTXdemo/shaders/1.basic/: ray_gen.glsl
CH2_RTXdemo/shaders/2.camera/: ray_chit.glsl  ray_gen.glsl  ray_miss.glsl
CH2_RTXdemo/shaders/3.texture/: ray_chit.glsl  ray_gen.glsl  ray_miss.glsl
CH2_RTXdemo/shaders/4.light and shadow/: ray_gen.glsl
CH2_RTXdemo/shaders/5.mirror/: ray_chit.glsl  ray_gen.glsl
CH2_RTXdemo/shaders/6.max recursion/: ray_gen.glsl
CH3_RTXdemoKHR/: CMakeLists.txt  rtxApp.cpp
CH3_RTXdemoKHR/shaders/: compilleGLSL.bat  shadow_ray_miss.glsl
CH3_RTXdemoKHR/shaders/1.basic/: ray_gen.glsl
CH3_RTXdemoKHR/shaders/2.camera/: ray_chit.glsl  ray_gen.glsl  ray_miss.glsl
CH3_RTXdemoKHR/shaders/3.texture/: ray_chit.glsl  ray_gen.glsl  ray_miss.glsl
CH3_RTXdemoKHR/shaders/4.light and shadow/: ray_gen.glsl
CH3_RTXdemoKHR/shaders/5.mirror/: ray_chit.glsl  ray_gen.glsl  (+1 more)
CH4_imgui/: CMakeLists.txt  hello_imgui.cpp  hello_imgui_markdown.cpp
CH5_debugprintf/: CMakeLists.txt  hello_debugprintf.cpp  vk_layer_settings.txt
CH5_debugprintf/shaders/: compilleGLSL.bat  compilleHLSLwithDXC2.bat  frag.spv  vert.spv
(+5 files in other folders)
